# flightlog_analyzer

./: .gitignore  CHANGELOG.md  README.md  app.py  pyproject.toml  requirements.md  requirements.txt  setup.py
assets/styles/: main.css
docs/: INSTALLATION.md  TROUBLESHOOTING.md
docs/api/: README.md
docs/architecture/: README.md
docs/user_guide/: README.md
examples/: basic_usage.py  sample_data.py
scripts/: __init__.py  build.py
src/: __init__.py
src/computed_signals/: __init__.py  cache.py  dependencies.py  engine.py  functions.py  parser.py
src/config/: __init__.py  loader.py  schema.py  settings.py
src/core/: __init__.py  app.py  constants.py  exceptions.py  types.py  version.py
src/data/: __init__.py  alignment.py  cache.py  downsampling.py  folder_importer.py  hierarchy.py  importers.py  loader.py  signal_assignment.py  signal_groups.py  validator.py
src/export/: __init__.py  data_export.py  geo_formats.py  images.py
src/ui/: __init__.py  app_layout.py  callbacks.py  signal_assignment_presets.py  state.py
src/utils/: __init__.py  geo.py  interpolation.py  statistics.py  time_utils.py
src/visualization/: __init__.py  base.py  manager.py  theme.py
tests/: __init__.py  conftest.py
tests/integration/: test_visualization.py
tests/performance/: __init__.py  test_large_datasets.py
tests/unit/: test_alignment.py  test_app.py  test_cache_and_export.py  test_callbacks_coverage.py  test_computed_signals.py  test_computed_signals_full.py  test_config.py  test_coverage_boost.py  test_data_loader.py  test_downsampling.py  test_events.py  test_final_coverage.py  test_folder_import.py  test_geo_utils.py  test_hierarchy.py  test_import_export.py  test_importers_coverage.py  test_map3d_xyplot.py  test_more_coverage.py  test_push_to_85.py  test_signal_groups.py  test_timeseries_xyplot_coverage.py  test_tlog_import.py  test_ui_callbacks.py  test_ui_components.py  test_ui_functionality.py  test_ui_layouts.py  test_utils.py  test_validator_coverage.py  test_version.py  test_visualization_coverage.py  (+1 more)
(+23 files in other folders)
